objects/USPS_Label_Payment__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This USPS Label is to get Payment Token Confirmation.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRID__c</fullName>
        <label>CRID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MID__c</fullName>
        <label>MID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manifest_MID__c</fullName>
        <label>Manifest MID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Access_Token_URL__c</fullName>
        <description>This field is to store the Payment Access Token URL</description>
        <label>Payment Access Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Role_Name_LO__c</fullName>
        <label>Role Name LO</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Name_P__c</fullName>
        <label>Role Name P</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>USPS Label Payment</label>
</CustomObject>